fixes for  gapaa

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,7 +18,7 @@ html {
     align-items: center;
 }
 
-.header__logo { 
+.header__logo {
     padding: 8px;
 }
 
@@ -83,16 +83,19 @@ html {
     font-size: 56px;
     line-height: 68px;
     letter-spacing: -1.4px;
+
     &_idea {
         position: absolute;
         top: -43px;
         right: 122px;
     }
-    &_underline{
+
+    &_underline {
         position: absolute;
         bottom: 25px;
         right: 20px;
     }
+
     &_highlight {
         color: #FFB637;
     }
@@ -140,9 +143,10 @@ html {
     font-size: 15px;
     font-weight: 800;
     letter-spacing: 0.225px;
- span{
+
+    span {
         opacity: 0.23999999463558197;
-}
+    }
 }
 
 .hero-bottom {
@@ -184,25 +188,25 @@ section {
     background: #BFE7E8;
     padding-top: 80px;
     padding-bottom: 80px;
-}
 
-.impactful__title {
-    padding-bottom: 20px;
-    color: #333;
-    text-align: center;
-    font-size: 48px;
-    font-weight: 900;
-    line-height: 60px;
-    letter-spacing: -0.48px;
-}
+    &__title {
+        padding-bottom: 20px;
+        color: #333;
+        text-align: center;
+        font-size: 48px;
+        font-weight: 900;
+        line-height: 60px;
+        letter-spacing: -0.48px;
+    }
 
-.impactful__description {
-    padding-bottom: 80px;
-    color: var(--neutral-700, #374151);
-    text-align: center;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 0.18px;
+    &__description {
+        padding-bottom: 80px;
+        color: var(--neutral-700, #374151);
+        text-align: center;
+        font-size: 18px;
+        line-height: 28px;
+        letter-spacing: 0.18px;
+    }
 }
 
 .impactful-list {
@@ -283,6 +287,7 @@ section {
     line-height: 40px;
     letter-spacing: 0.3px;
     text-transform: uppercase;
+
     span {
         opacity: 0.7;
     }
@@ -301,6 +306,7 @@ section {
     line-height: 60px;
     letter-spacing: -0.48px;
     margin-bottom: 80px;
+
     span {
         color: #B50700;
     }
